samples/_failures_safe/1761465803_c2d9af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7993686.c: In function ‘main’:
./samples/SAFE/__tmp_c7993686.c:154:5: error: ‘MATRIX_PR’ undeclared (first use in this function); did you mean ‘MATRIX_FREE’?
  154 |     MATRIX_PR
      |     ^~~~~~~~~
      |     MATRIX_FREE
./samples/SAFE/__tmp_c7993686.c:154:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c7993686.c:154:14: error: expected ‘;’ at end of input
  154 |     MATRIX_PR
      |              ^
      |              ;
./samples/SAFE/__tmp_c7993686.c:154:5: error: expected declaration or statement at end of input
  154 |     MATRIX_PR
      |     ^~~~~~~~~
